# dbt-testing

./: .gitignore  pyproject.toml  requirements.txt
.dbt/: profiles.yml
transpile_sql/: dbt_project.yml
transpile_sql/models/example/: my_t_sql_model.sql  transpile_sql_tsql_to_duckdb.py
